Added QC level comparison

--- a/appendix_general.tex
+++ b/appendix_general.tex
@@ -1,6 +1,14 @@
 \chapter{Appendix}
 
-% TODO: show parameters for sklearn models
+\section{Netatmo}
+\label{appendix: netatmo}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.8\textwidth]{images/qc_hamburg_netatmo_june_before_after.png}
+    \caption{QC for Netatmo in Hamburg showing difference between day and night, 19.06.2023}
+    \label{fig:qc netatmo hamburg before after m5}
+\end{figure}
 
 \section{Sklearn Model Parameters for Single Station Interpolation}
 \label{appendix: sklearn ml parameters single station}
