--- a/chapter2.tex
+++ b/chapter2.tex
@@ -16,7 +16,7 @@ UHIs can be classified in many ways. Typically, there is a horizontal classifica
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{images/Mesoscale Boundary Layer.png}
-    \caption{Mesoscale view of the urban climate, redrawn from~\cite{oke2006guideline}}
+    \caption{Mesoscale view of the urban climate, adopted from~\cite{oke2006guideline}}
     \label{fig:mesoscale boundary layer}
 \end{figure}
 
@@ -25,7 +25,7 @@ The mesoscale, as depicted in Fig~\ref{fig:mesoscale boundary layer}, spans the 
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{images/Localscale Boundary Layer.png}
-    \caption{Localscale view of the urban climate, redrawn from~\cite{oke2006guideline}, (Todo finish)}
+    \caption{Local scale view of the urban climate, adopted from~\cite{oke2006guideline}}
     \label{fig:localscale boundary layer}
 \end{figure}
 
@@ -34,7 +34,7 @@ The local scale is situated closer to the surface and contains landscape feature
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{images/microscale boundary layer.png}
-    \caption{Microscale view of the urban climate, redrawn from~\cite{oke2006guideline}, (Todo)}
+    \caption{Microscale view of the urban climate, adopted from~\cite{oke2006guideline}}
     \label{fig:microscale boundary layer}
 \end{figure}
 
