--- a/chapter8.tex
+++ b/chapter8.tex
@@ -8,11 +8,11 @@ The goal of this chapter is to evaluate different use-cases for ML-based interpo
   \item Areal interpolation of air temperature
 \end{enumerate}
 
-Next to these main uses cases we discuss in this work, the different regression models can be used in many other ways, primarily based on the features used during training. Some regression models could for example be used to predict future air temperature as well, however this is out of the scope of this work.
+Next to these main uses cases we discuss there are other ways the different regression models can be used, primarily decided by the features used. Some regression models could for example be used to predict future air temperature, i.e., extrapolation, as well; however, this is out of the scope of this work.
 
 \subsubsection{Implementation Details}
 
-All ML models are implemented using Python and the scikit-learn library~\cite{scikit-learn}. Additionally the following libraries are used:
+All ML models are implemented using Python and the scikit-learn library~\cite{scikit-learn}. Additionally, the following libraries are used:
 
 \begin{itemize}
   \item Pandas, Numpy, Geopandas, scipy, matplotlib, shapely, contextily, pytz, sklearn, seaborn, rasterio, polars, Google Earth Engine, pykrige, pytorch, missingno
@@ -21,25 +21,23 @@ All ML models are implemented using Python and the scikit-learn library~\cite{sc
 \subsubsection{Validation Methodology}
 \label{sec:validation methodology}
 
-In order to validate the different models, we use the following methodology:\\
-\\
-We evaluate two locations based on data availability, e.g., Hamburg and Stuttgart, that also have slightly different climate characteristics, tho both are located in Germany in a moderate cool climatic zone, with Hamburg located near the coast in rather maritim climate and Stuttgart located more inland in a continental climate. Hamburg has also higher precipitation and wind compared to Stuttgart.
+To validate the different models, we use the following methodology:\\
+We evaluate two locations based on data availability, e.g., Hamburg and Stuttgart, that also have slightly different climate characteristics, although both are located in Germany in a moderate cool climatic zone, with Hamburg located near the coast in rather Maritim climate and Stuttgart located more inland in a continental climate. Hamburg has also higher precipitation and wind compared to Stuttgart.
 For both locations, we collected PWS data from Netatmo and Sensor.Community, however Netatmo data is only available for the whole month of June 2023 for Hamburg and for a single timestep on 19. June 2023 14h for Stuttgart, while Sensor.Community data is available for the whole months of January and June 2023 for both locations.\\
-For both locations for both interpolation use-cases, we first compare all available models, e.g., Linear Regression (baseline), KNN, Random Forest, SVM, and Histogram-based Gradient Boosting, with all features against each other to get an understanding of the overall performance of the models and maximum achivable potential, given the assumption that more features generally improve prediction quality. The datasets are split into a training and test set. 70\% of the data is used for training and 30\% is completely withhold for testing. The training and test set are split randomly. The same split is used for all models and sensors to ensure comparability.
-Afterwards, the most promising model with the lowest error is used to further evaluate specific influences such as distances between neighbours or the amount of training data and time intervals. For the further evaluation, 5-Fold Cross Validation is used in order to reduce the risk of overfitting~\cite{kohavi1995study}. We note here, that a k of 10 would be preferred, however due to the computational overhead we only use a k of 5 for exploration.\\
-All ML models in the initial evaluation are trained using the default parameters as defined in the scikit-learn library. The only exception is the number of estimators for the Random Forest Regressor and the number of iterations for the Histogram-based Gradient Boosting Regressor, which are both increased from 100 to 200 to improve the performance of the models as found out by previous exploration. In order to get the best possible performance of each model, an exhaustive grid search would be prefered for all models in order to fine-tune all hyperparameters, however due to the computational overhead of running exhaustive grid searches, this is not feasible in the scope of this work.\\
-For the error metrics, the following candidates are available: MSE, MAE, RSME, R2. MSE is the most commonly used error metric and is more sensitive to outliers, whereas MAE punishes outliers less but is therefore also more variable. Related work commonly uses RSME as it has the same unit as the response variable, therefore RSME is used as the main error metric. R2 is additionally used to get an understanding of the variance of the model.
+For both locations for both interpolation use-cases, we first compare all available models, e.g., Linear Regression, KNN, Random Forest, SVM, and Histogram-based Gradient Boosting, with all features against each other to get an understanding of the overall performance of the models and maximum achievable potential, given the assumption that more features generally improve prediction quality. The datasets are split into a training and test set. 70\% of the data is used for training and 30\% is completely withhold for testing. The training and test set are split randomly. The same split is used for all models and sensors to ensure comparability.
+Afterwards, the most promising model with the lowest error is used to further evaluate specific influences such as distances between neighbours or the amount of training data and time intervals. For the further evaluation, 5-Fold Cross Validation is used to reduce the risk of overfitting~\cite{kohavi1995study}. We note here that a k of 10 would be preferred, however due to the computational overhead we only use a k of 5 for exploration.\\
+All ML models in the initial evaluation are trained using the default parameters as defined in the scikit-learn library. The only exception is the number of estimators for the Random Forest Regressor and the number of iterations for the Histogram-based Gradient Boosting Regressor, which are both increased from 100 to 200 to improve the performance of the models as found out by previous exploration. To get the best possible performance of each model, an exhaustive grid search would be preferred for all models to fine-tune all hyperparameters; however, due to the computational overhead of running exhaustive grid searches, this is not feasible in the scope of this work.\\
+For the error metrics, the following candidates are available: MSE, MAE, RSME, R2. MSE is the most used error metric and is more sensitive to outliers, whereas MAE punishes outliers less but is therefore also more variable. Related work commonly uses RSME as it has the same unit as the response variable, therefore RSME is used as the main error metric. R2 is additionally used to get an understanding of the variance of the model.
 
 \section{Interpolation of Air Temperature for a Specific Location}
 
-The first use-case to be evaluated is the interpolation of air temperature for a specific sensor. The main idea behind this approach is to use ML models to capture the dependency between neighbouring weather stations and sensors, so that in case a sensor is not available, the air temperature can be interpolated more easily, especially over a longer period of time. Another use-case could be that a sensor location is not stationary, and the sensor for example moves through a city mounted on a bus or bike. In this case, the sensor could be used to capture a snapshot of the air temperature at a previously unobserved location, increasing the spatial coverage of the sensor network.\\
-The evaluation for a specific location is done using the following steps:
+The first use-case to be evaluated is the interpolation of air temperature for a specific sensor. The main idea behind this approach is to use ML models to capture the dependency between neighbouring weather stations and sensors, so that in case a sensor is not available, the air temperature can be interpolated more easily, especially over a longer period. Another use-case could be that a sensor location is not stationary, and the sensor for example moves through a city mounted on a bus or bike. In this case, the sensor could be used to capture a snapshot of the air temperature at a previously unobserved location, increasing the spatial coverage of the sensor network. The evaluation for a specific location is done using the following steps:
 
 \begin{enumerate}
   \item Create datasets for training and testing based on the datasets for June 2023 after QC for Hamburg and Stuttgart
-  \item Data pre-processing for the specific models. Only Histogram-based Gradient Boosting supports missing values, therefore we need to fill in missing values for all other models using an imputer. We use a simple mean imputer for this purpose, that fills missing values with the mean value for each row, not column. All input data is normalized using a standard scaler. This pre-processing step could be further improved by using different means of imputation or using different scalers.
-  \item Fit each model using the datasets and evaluate the performance using all available features for all locations to get an overview of the performance of each model. The dataset is split 70\% for training and 30\% for testing, but no k-Fold Cross Validation is used due to the computational overhead.
-  \item Choose the most promising model and further evaluate the influence of different features, e.g., distances between neighbours, and the amount of training data and time intervals. This step only selects a subset of stations of particular interest, e.g., in the city centre or near water, adds 5-Fold Cross Validation and grid search to fine-tune the hyperparameters of the model.
+  \item Data pre-processing for the specific models. Only Histogram-based Gradient Boosting supports missing values, therefore we need to fill in missing values for all other models using an imputer. We use a simple mean imputer for this purpose, that fills missing values with the mean value for each row, i.e., each timestamp, not column. All input data is normalized using a standard scaler as some models such as KNN need normalized data, which should not have any impact on models that don't need normilization of input features such as RF and Gradient Boosting. This pre-processing step could be further improved by using different means of imputation or using different scalers.
+  \item Fit each model using the datasets and evaluate the performance using all available features for all locations to get an overview of the performance of each model. The dataset is split 70\% for training and 30\% for testing, but no k-Fold Cross Validation is used due to the computational overhead for the initial comparison across all sensor locations.
+  \item Choose the most promising model and further evaluate the influence of different features, e.g., distances between neighbours, the amount of training data, and time intervals. This step only selects a subset of stations of particular interest, e.g., in the city centre or near water and adds 5-Fold Cross Validation for further trust in the results.
 \end{enumerate}
 
 \begin{figure}[ht]
@@ -51,12 +49,13 @@ The evaluation for a specific location is done using the following steps:
 
 \subsection{Model Comparison}
 
-First, we compare the overall performance of the models against each other. Figure~\ref{fig:rmse by model type} shows the RMSE of each model across both Hamburg and Stuttgart for the month of June 2023. For all models, one evaluation was done using the imputed dataset without missing values, as Linear Regression, KNN, Random Forest and SVM Regression cannot handle missing values. Gradient Bootsting was once run with and once run without imputed data, where the imputed data performed better at 2 neighbours, possibly due to neighbours with missing values, but performed slightly worse than not imputed data for higher amounts of neighbours. SVM, KNN and Random Forest seem to hit a plato when reaching a certain number of neighbours, around 15-20, whereas Linear Regression and Gradient Boosting continue to improve with a higher number of neighbours.\\
-Gradient Boosting shows the lowest RMSE starting with over 10 neighbours and has the smallest confidence interval. The non imputed data also performs slightly better, as seen in Appendix (TODO: Link), therefore we will continue a more detailed evaluation with the Gradient Boosting model without imputed data. It is to note, that the individual models were mainly run with default parameters as given by sklearn library, therefore the performance of the individual models could be further improved. The exact parameter configurations can be found in Appendix~\ref{appendix: sklearn ml parameters single station}.
+First, we compare the overall performance of the models against each other. Figure~\ref{fig:rmse by model type} shows the RMSE of each model across both Hamburg and Stuttgart for the month of June 2023. For all models, one evaluation was done using the imputed dataset without missing values, as Linear Regression, KNN, Random Forest and SVM Regression cannot handle missing values. Gradient Boosting was once run with and once run without imputed data, where the imputed data performed better at 2 neighbours, possibly due to neighbours with missing values, but performed slightly worse than not imputed data for higher amounts of neighbours. SVM, KNN and Random Forest seem to hit a plateau when reaching a certain number of neighbours, around 15-20, whereas Linear Regression and Gradient Boosting continue to improve with a higher number of neighbours.\\
+Gradient Boosting shows the lowest RMSE starting with over 10 neighbours and has the smallest confidence interval. The non-imputed data also performs slightly better, as seen in Appendix %TODO: Link
+, therefore we will continue a more detailed evaluation with the Gradient Boosting model without imputed data. It is to note, that the individual models were mainly run with default parameters as given by sklearn library, therefore the performance of the individual models could be further improved. The exact parameter configurations can be found in Appendix~\ref{appendix: sklearn ml parameters single station}.
 
 \subsection{Further Evaluation - Gradient Boosting}
 
-HistGradientBoostingRegressor without imputation achieves overall the lowest RMSE starting with more than 10 neighbours and continuously improves with more neighbours, however the improvements after 30 neighbours are really small. This model is great because it has native NaN support and we can save the imputation step that can possible introduce bias into the model. The difference to KNN and Random Forest is not that big with a little less than RSME of 0.1, however the confidence interval is also smaller compared to the other models. Due to the lowest error and performance benefits compared to other models such as Random Forests and no need to use imputation, the HistGradientBoostingRegressor is used in the following section to further investigate feature importance, the influence of different time intervals and the impact of QC on the process.\\
+HistGradientBoostingRegressor without imputation achieves overall the lowest RMSE starting with more than 10 neighbours and continuously improves with more neighbours; however, the improvements after 30 neighbours are small. This model is great because it has native NaN support and we can save the imputation step that can possibly introduce bias into the model. The difference to KNN and Random Forest is not that big with a little less than RSME of 0.1, however the confidence interval is also smaller compared to the other models. Due to the lowest error and performance benefits compared to other models such as Random Forests and no need to use imputation, the HistGradientBoostingRegressor is used in the following section to further investigate feature importance, the influence of different time intervals and the impact of QC on the process.\\
 
 \begin{figure}[htp]
     \centering
@@ -73,8 +72,8 @@ HistGradientBoostingRegressor without imputation achieves overall the lowest RMS
 \subsubsection{Influence of Distance between Neighbours}
 
 % Hypotheses: closer neighbours have a higher influence on the temperature
-The goal with hyperlocal temperature mapping is to get a deep insight into very local climatic conditions. If two sensors are located in the same climatic conditions, in an extreme case directly situated next to each other, both sensors should measure the same temperature. Therefore the hypotheses is, that closer stations have a higher influence on the prediction quality, e.g., if closer stations are chosen as neighbours the prediction quality is better compared than if the same number of neighbours is chosen but further away. We investigate this hypotheses by comparing the RMSE of prediction quality for different distances between neighbours. Because there are not so many stations available for Hamburg, that for example 10 stations could be selected in a 500m radius, we look at the minimum distance instead and remove neighbours that are to close to the station.\\
-The evaluation is done using 5-fold cross validation for a subset of 10 stations in Hamburg, spread across a bigger area so we can cover different distances between neighbours and different climatic conditions, e.g., distance to water, situated in the city centre etc. The list of stations can be found in Appendix~\ref{appendix stations for minimum distance between stations}. The number of neighbours was set to 10 as this number was the number at which Gradient Boosting putperformed other models. Figure~\ref{fig:eval hamburg minimum distance between stations} shows the RMSE for different minimum distances between stations in km for 10 stations from Netatmo in Hamburg with 10 neighbours. We can see that the RMSE is increasing minimally across the first few kilometres and then starts to sharply increase with greater distances over 10km. However, if we take a look at Figure~\ref{fig:eval hamburg minimum distance between stations by station id} which shows the same data but grouped by station id, we can see that there are several stations whose RMSE does not increase with greater distances.\\ % Todo: why?
+The goal with hyperlocal temperature mapping is to get a deep insight into very local climatic conditions. If two sensors are located in the same climatic conditions, in an extreme case directly situated next to each other, both sensors should measure the same temperature. Therefore, the hypothesis is, that closer stations have a higher influence on the prediction quality, e.g., if closer stations are chosen as neighbours the prediction quality is better compared than if the same number of neighbours is chosen but further away. We investigate this hypotheses by comparing the RMSE of prediction quality for different distances between neighbours. Because there are not so many stations available for Hamburg, that for example 10 stations could be selected in a 500m radius, we look at the minimum distance instead and remove neighbours that are to close to the station.\\
+The evaluation is done using 5-fold cross validation for a subset of 10 stations in Hamburg, spread across a bigger area so we can cover different distances between neighbours and different climatic conditions, e.g., distance to water, situated in the city centre etc. The list of stations can be found in Appendix~\ref{appendix stations for minimum distance between stations}. The number of neighbours was set to 10 as this number was the number at which Gradient Boosting outperformed other models. Figure~\ref{fig:eval hamburg minimum distance between stations} shows the RMSE for different minimum distances between stations in km for 10 stations from Netatmo in Hamburg with 10 neighbours. We can see that the RMSE is increasing minimally across the first few kilometres and then starts to sharply increase with greater distances over 10km. However, if we take a look at Figure~\ref{fig:eval hamburg minimum distance between stations by station id} which shows the same data but grouped by station id, we can see that there are several stations whose RMSE does not increase with greater distances.\\ % Todo: why?
 
 \subsubsection{Feature Importance}
 
@@ -93,7 +92,19 @@ Figure~\ref{fig:eval feature importance 10 stations single location} shows the R
     \label{fig:eval permutation importance single station}
 \end{figure}
 
-\subsubsection{Influence of Quality Control, Time Intervals and Non-Stationary Sensors}
+\subsubsection{Influence of Quality Control}
+
+In this work, we decided to use QC steps to exclude stations that are either faulty, setup indoors, or perhaps setup in an incorrect way (i.e., too close to a wall or the ground). However, depending on the use-case, one might want to include sensor readings that are flagged as outliers by the m5 buddy check either because the sensor density is lower or one would actually want to get a more fine-granular overview of hotspots. As a result, we compare the different QC levels of m4 and m5, i.e., Temporal Correlation and Spatial Buddy Check, to see if the QC levels have an influence on prediction quality of the interpolation process.\\
+For this test, we use HGB without imputed data with 30 neighbours across our 10 testing stations from Netatmo  from June 2023 in Hamburg together with 5-fold Cross Validation. The result shown in Figure~\ref{fig:qc hamburg level comparison} show the smallest RMSE for the m4 QC level, i.e., the Temporal Correlation, which could be due to the increase in data availability per station to train on. This result indicates, that maybe the m5 buddy check is too strict and maybe the QC level m4 could be sufficient for the interpolation process.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1\textwidth]{images/qc_hamburg_level_comparison.png}
+    \caption{QC Level Comparison for Netatmo Data for Hamburg, June 2023}
+    \label{fig:qc hamburg level comparison}
+\end{figure}
+
+\subsubsection{Influence of Time Intervals and Non-Stationary Sensors}
 
 % Inplicitly included via QC process, because many values are already missing -> check for subset with more data available how missing values influence the model
 % - compare m4 vs m5
@@ -101,7 +112,7 @@ Figure~\ref{fig:eval feature importance 10 stations single location} shows the R
 Sensor networks have the advantage, compared to remote sensing approaches, that they provide high temporal resolutions, however at the cost of spatial coverage. Related studies in the field of sensor networks suggest, %TODO: cite
 that stationary sensor networks show less variability, but suffer from lower spatial coverage. In comparison, fully mobile sensor networks have a higher spatial coverage, but suffer from higher variability. Combining both approaches could therefore be a promising approach to increase the spatial coverage of the sensor network, while still maintaining a high prediction quality.\\
 In the context of air temperature sensing, air temperature sensors could be mounted to busses, cars, scooters, or bikes. Unfortunately, there are currently no such datasets available, however we can simulate a non-stationary sensor by removing data points of specific sensors in either a fixed interval, e.g., simulating a bus line that visits a certain location in a rather fixed interval, or randomly, simulating a bike or scooter that is used periodically.\\
-We have already indirectly simulated missing data by applying QC steps before using the station data to train the models, as seen in Section~\ref{sec:quality control}, where we lose quite some data, especially for Sensor.Community in the m5 buddy check. In order to further investigate the influence of missing data, we instead of using data that passed the m5 check, we will use data that passed the m4 check, which is less strict and therefore has more data available. An interesting exploration could be to use the previous sensor with Netatmo Station Id \textit{70ee:50:83:b1:e2} and choose on of the neighbours that has a high influence on the prediction quality, e.g., neighbour 4, and remove data points in both fixed and random intervals to simulate a moving sensor instead of a stationary sensor. We could also check what happens, if not only one but multiple neighbours are turned into simulated moving sensors, maybe with different intervals.\\
+We have already indirectly simulated missing data by applying QC steps before using the station data to train the models, as seen in Section~\ref{sec:quality control}, where we lose quite some data, especially for Sensor.Community in the m5 buddy check. In order to further investigate the influence of missing data, we instead of using data that passed the m5 check, we will use data that passed the m4 check, which is less strict and therefore has more data available. An interesting exploration could be to use the previous sensor with Netatmo Station Id \textit{70ee:50:83:b1:e2} and choose one of the neighbours that has a high influence on the prediction quality, e.g., neighbour 4, and remove data points in both fixed and random intervals to simulate a moving sensor instead of a stationary sensor. We could also check what happens, if not only one but multiple neighbours are turned into simulated moving sensors, maybe with different intervals.\\
 First, we need to get an understanding how the different QC steps influence the interpolation process. Therefore, we compare the RMSE for both m4 and m5 QC step for the 10 already used stations with 30 neighbours and the time feature.
 
 % TODO: add figure for m4 vs m5
@@ -138,7 +149,7 @@ baseline: mean, IWD, ordinary kriging (with different kernels)
 \subsection{Geostatistical Interpolation Baseline}
 In order to evaluate the performance of the ML model, we need to first get a better understanding of the interpolation quality of existing interpolation techniques. Next to simpler deterministic interpolation methods, such as inverse weight distance (IWD) or k-nearest neighbours (KNN) that are easy and performant, but struggle to capture more complex interdependencies, there are also more complex methods available. The most common geostatistical method for interpolation is Kriging, which is based on a gaussian process and 
 
-In the scope of this work, we unfortunately cannot compare all of these methods with each other and therefore need to focus on a subset of methods. EBK and EBKRP are one of the most commonly used methods for temperature interpolation (cite). According to \cite{njoku2023effects}, EBKRP continuously outperforms EBK in different weather station density scenarios, therefore we will use EBKRP as a baseline for our comparison.\\
+In the scope of this work, we unfortunately cannot compare all of these methods with each other and therefore need to focus on a subset of methods. EBK and EBKRP are one of the most commonly used methods for temperature interpolation (cite). According to~\cite{njoku2023effects}, EBKRP continuously outperforms EBK in different weather station density scenarios, therefore we will use EBKRP as a baseline for our comparison.\\
 In the following, the machine learning fundamentals for this work are explained and the different ML regression model types are introduced.
 
 
