Point evaluation almost done

--- a/chapter8.tex
+++ b/chapter8.tex
@@ -107,16 +107,19 @@ For this test, we use HGB without imputed data with 30 neighbours across our 10 
 \subsubsection{Influence of Time Intervals and Non-Stationary Sensors}
 
 % Inplicitly included via QC process, because many values are already missing -> check for subset with more data available how missing values influence the model
-% - compare m4 vs m5
 
-Sensor networks have the advantage, compared to remote sensing approaches, that they provide high temporal resolutions, however at the cost of spatial coverage. Related studies in the field of sensor networks suggest, %TODO: cite
-that stationary sensor networks show less variability, but suffer from lower spatial coverage. In comparison, fully mobile sensor networks have a higher spatial coverage, but suffer from higher variability. Combining both approaches could therefore be a promising approach to increase the spatial coverage of the sensor network, while still maintaining a high prediction quality.\\
-In the context of air temperature sensing, air temperature sensors could be mounted to busses, cars, scooters, or bikes. Unfortunately, there are currently no such datasets available, however we can simulate a non-stationary sensor by removing data points of specific sensors in either a fixed interval, e.g., simulating a bus line that visits a certain location in a rather fixed interval, or randomly, simulating a bike or scooter that is used periodically.\\
-We have already indirectly simulated missing data by applying QC steps before using the station data to train the models, as seen in Section~\ref{sec:quality control}, where we lose quite some data, especially for Sensor.Community in the m5 buddy check. In order to further investigate the influence of missing data, we instead of using data that passed the m5 check, we will use data that passed the m4 check, which is less strict and therefore has more data available. An interesting exploration could be to use the previous sensor with Netatmo Station Id \textit{70ee:50:83:b1:e2} and choose one of the neighbours that has a high influence on the prediction quality, e.g., neighbour 4, and remove data points in both fixed and random intervals to simulate a moving sensor instead of a stationary sensor. We could also check what happens, if not only one but multiple neighbours are turned into simulated moving sensors, maybe with different intervals.\\
-First, we need to get an understanding how the different QC steps influence the interpolation process. Therefore, we compare the RMSE for both m4 and m5 QC step for the 10 already used stations with 30 neighbours and the time feature.
+Sensor networks have the advantage, compared to remote sensing approaches, that they provide high temporal resolutions, however at the cost of spatial coverage. In the context of air temperature sensing, air temperature sensors could be mounted to busses, cars, scooters, or bikes to increase the spatial coverage of the sensor network. Unfortunately, there are currently no datasets of actual moving sensors available; however, we can simulate a non-stationary sensor by removing data points of specific sensors in either a fixed interval, e.g., simulating a bus line that visits a certain location in a rather fixed interval, or randomly, simulating a bike or scooter that is used periodically.\\
+We have already indirectly simulated missing data by applying QC steps before using the station data to train the models, as seen in Section~\ref{sec:quality control}, where we lose quite some data. An interesting exploration could be to use the previous sensor with Netatmo Station Id \textit{70ee:50:83:b1:e2} and choose neighbours that have a high influence on the prediction quality, e.g., neighbour 4 and 13, and remove data points in both fixed and random intervals to simulate a moving sensor instead of a stationary sensor. We could also check what happens, if not only two but multiple neighbours are turned into simulated moving sensors.\\
 
-% TODO: add figure for m4 vs m5
-% TODO: add figure for different time intervals
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1\textwidth]{images/eval_moving_sensors_hamburg.png}
+    \caption{Comparison between amount of data sampled from simulated moving sensors for Netatmo station \textit{70ee:50:83:b1:e2} with 30 neighbours}
+    \label{fig:eval moving sensors}
+\end{figure}
+
+In Figure~\ref{fig:eval moving sensors}, results are shown for the Netatmo station \textit{70ee:50:83:b1:e2} with 30 neighbours where we start off with simulating 2 sensors, i.e., \textit{70:ee:50:3f:1f:1c} and \textit{70:ee:50:96:d9:70}, which had high permutation importance, to quickly see differences between different sampling size for individual sensors. Iteratively, additional sensors were added from a list of randomly sorted neighbouring station ids, so that in each iteration the stations from the previous iteration are included. The `Removed' columns show the results with the moving sensors completely removed, while the `all' column shows what happens if all available sensor readings are used, as reference. The other numbers show the number of readings that are randomly sampled for that sensor. The number of available sensor readings per sensor is averaging around 1000-1500 readings per sensor, which was reduced from the raw data due to QC or missing data. 5-fold cross validation was used for each combination of number of moving sensors and number of readings to sample.\\
+We can see, that a low number of moving sensors, especially with high number of readings available, do not have a high influence on the RMSE, which averages between 0.5 and 0.4; however, starting with 20 moving sensors, the RMSE jumps a lot, especially with 30 moving sensors, i.e., all sensors are moving and have as little as 10 readings for the whole month of June in Hamburg. This exploration suggests, that there is not a big difference between stationary sensors and moving sensors with less frequency, as long as a certain amount of readings for that location is available and not all sensors are not available. Further research in this direction could focus on the comparison between different stations with varying number of neighbours and sample sizes. Additionally, we didn't test with fixed intervals yet, so this could also be an interesting exploration to for example simulate bus lines with sensors.
 
 % TODO: optional
 % \subsubsection{January vs June}
